changes for live

--- a/app/code/Customer/ContactResponse/view/frontend/email/response.html
+++ b/app/code/Customer/ContactResponse/view/frontend/email/response.html
@@ -10,7 +10,7 @@
 
 <table class="message-details">
     <tr>
-        <td>Beste <strong>{{var data.name}}</strong></td>
+        <td>Beste <strong>{{var data.name}}</strong>,</td>
     </tr>
     <tr>
         <td>Bedankt voor uw bericht.</td>
@@ -18,6 +18,12 @@
 	<tr>
 	<td>Wij hebben dit in goede orde ontvangen en nemen zo spoedig mogelijk contact met u op.</td>
 	</tr>
+	<tr>
+    <td>Met vriendelijke groet,</td>
+    </tr>
+    <tr>
+    <td>Keizer, KijkopKleur</td>
+    </tr>
 </table>
 
 {{template config_path="design/email/footer_template"}}
