--- a/app/design/frontend/KoK/koktheme/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/KoK/koktheme/Magento_Theme/layout/default_head_blocks.xml
@@ -10,6 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
         <css src="css/bootstrap/bootstrap.css" media="all and (min-width: 1px)"/>
         <css src="css/font-awesome.min.css" type="text/css"/>
+        <css src="css/custom.css" type="text/css"/>
         <!--<script src="js/bootstrap/bootstrap.js"/>-->
         <!--<script src="js/bootstrap/jquery-3.3.1.min.js"/>-->
         <!--<script src="js/bootstrap/popper.js"/>-->
