--- a/app/design/frontend/KoK/koktheme/web/css/custom.css
+++ b/app/design/frontend/KoK/koktheme/web/css/custom.css
@@ -33,6 +33,8 @@ header.page-header {background: #DCEADD;}
 .minicart-wrapper .action.showcart.active:before {content: "\f07a";color: #333 !important;font-family: 'FontAwesome';line-height: 20px;}
 .page-header .header.content .minicart-wrapper span.text {clip: unset;overflow: visible !important;height: auto;position: unset !important;color: #333;padding-left: 5px;}
 .page-header .header.content .minicart-wrapper {margin-top: 5rem;background: #fff;padding: 6px 12px;}
+.account .sidebar-main li.nav.item {float: left;width: 100%;}
+.block-collapsible-nav .item .delimiter{display: none;}
 @media only screen and (max-width:767px) {
 .page-header .panel.header .header-left {display: none;}
 .block-search .control {float: left;width: 100%;}
