--- a/app/design/frontend/KoK/koktheme/web/css/custom.css
+++ b/app/design/frontend/KoK/koktheme/web/css/custom.css
@@ -35,6 +35,8 @@ header.page-header {background: #DCEADD;}
 .page-header .header.content .minicart-wrapper {margin-top: 5rem;background: #fff;padding: 6px 12px;}
 .account .sidebar-main li.nav.item {float: left;width: 100%;}
 .block-collapsible-nav .item .delimiter{display: none;}
+.page-footer .footer.content .col-sm-3 {color: #69966f;}
+.page-footer .footer.content .col-sm-3 a {color: #69966f;}
 @media only screen and (max-width:767px) {
 .page-header .panel.header .header-left {display: none;}
 .block-search .control {float: left;width: 100%;}
@@ -53,4 +55,13 @@ header.page-header {background: #DCEADD;}
 .page-header .panel.header .header-left {width: 100%;}
 .page-header .panel.header ul.header.links {float: left;text-align: center;width: 100%;}
 .nav-sections .header.links{background: transparent !important;}
+}
+
+.navigation li.level0.nav-7.category-item.last.level-top.parent.ui-menu-item ul.submenu {
+    left: -362% !important;
+    min-width: 736px;
+}
+.navigation li.level0.nav-7.category-item.last.level-top.parent.ui-menu-item ul.submenu li {
+    float: left;
+    width: 25%;
 }
